# movies-website

./: .env.example  Cargo.toml  docker-compose.yml
.github/workflows/: push_main.yml
api/: Cargo.toml
api/src/: lib.rs  movies.rs  responses.rs
core/: Cargo.toml
core/src/: mutation.rs  query.rs
core/tests/: mock.rs
entity/: Cargo.toml
entity/src/: lib.rs  movie.rs
macros/: Cargo.toml
macros/src/: into_response.rs  lib.rs
macros/tests/: into_response_tests.rs
migration/: Cargo.toml
movies-api/: Cargo.toml
movies-api/src/: lib.rs  movies.rs
movies-core/: Cargo.toml
movies-core/src/: mutation.rs  query.rs
movies-core/tests/: integration.rs  mock.rs  prepare.rs
movies-core/tests/setup/: mod.rs
movies-entity/: Cargo.toml
movies-entity/src/: credit.rs  lib.rs  person.rs  prelude.rs  sea_orm_active_enums.rs
movies-macros/: Cargo.toml
movies-macros/src/: into_response.rs
movies-macros/tests/: into_response_tests.rs
movies-migration/: Cargo.toml
movies-migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230603_104409_alter_release_date.rs  m20240117_090322_create_person_table.rs  m20240117_092050_create_credit_table.rs  main.rs
src/: main.rs
