[package]
name = "movies-website"
version = "0.1.0"
authors = []
edition = "2021"
publish = false
default-run = "movies-website"

[workspace]
members = [
    ".",
    "movies-api",
    "movies-core",
    "movies-entity",
    "movies-macros",
    "movies-migration",
]

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
movies-api = { path = "movies-api" }
serde = "1.0.163"
serde_json = "1.0.96"
