[workspace]
members = [
    ".",
    "movies-api",
    "movies-core",
    "movies-entity",
    "movies-macros",
    "movies-migration",
]

[workspace.package]
version = "0.1.0"
authors = []
edition = "2021"
publish = false

[workspace.dependencies]
axum = "0.7.5"
chrono = { version = "0.4.26", default-features = false }
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.23.0", features = ["full"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono"] }
sea-orm = { version = "0.12.11", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
sea-orm-migration = { version = "0.12.11", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }

[package]
name = "movies-website"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
default-run = "movies-website"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
movies-api = { path = "movies-api" }
serde.workspace = true
serde_json.workspace = true
