[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
utoipa = { version = "3.3.0", features = ["axum_extras", "chrono"] }
chrono = { version = "0.4.26", default-features = false }
sea-orm = "0.12.11"
