[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
regex = { version = "1",  features = ["unicode-case"]}

[dependencies.sea-orm-migration]
version = "0.11.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]
