[package]
name = "movies-api"
version = "0.1.0"
authors = ["Yoshiera Huang <huangjasper@126.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.66"
axum = "0.6.1"
dotenvy = "0.15.6"
movies-core = { path = "../movies-core" }
movies-entity = { path = "../movies-entity" }
movies-macros = { path = "../movies-macros" }
movies-migration = { path = "../movies-migration" }
serde = "1.0.149"
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.8.0"
tower-http = { version = "0.3.5", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
utoipa = { version = "3.3.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
