[package]
name = "movies-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.66"
axum.workspace = true
dotenvy = "0.15.6"
movies-core = { path = "../movies-core" }
movies-entity = { path = "../movies-entity" }
movies-macros = { path = "../movies-macros" }
movies-migration = { path = "../movies-migration" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
utoipa.workspace = true
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
