[package]
name = "movies-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", default-features = false }
movies-entity = { path = "../movies-entity" }
serde = { version = "1", features = ["derive"] }
utoipa = { version = "3.3.0", features = ["axum_extras", "chrono"] }

[dependencies.sea-orm]
version = "0.12.11"
features = ["debug-print", "runtime-tokio-rustls", "sqlx-postgres"]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }

[dev-dependencies.sea-orm]
version = "0.12.11"
features = ["sqlx-sqlite"]
