[package]
name = "movies-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
movies-entity = { path = "../movies-entity" }
serde.workspace = true
utoipa.workspace = true
sea-orm.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
sea-orm = { workspace = true, features = ["sqlx-sqlite"] }
