[package]
name = "movies-migration"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
regex = { version = "1", features = ["unicode-case"] }
sea-orm-migration.workspace = true
